--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.26.1",
     "cheerio": "1.0.0-rc.10",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "express": "^4.17.3"
   }
 }
