--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-LIST_VAR=["http://localhost:3000", "https://miyou.airinganimes.co", "https://airinganimes.co", "https://miyou-ten.vercel.app/"]
+LIST_VAR=["http://localhost:3000", "https://miyou.airinganimes.co", "https://airinganimes.co", "https://miyou-ten.vercel.app/", "https://web.airinganimes.co"]
